# basketball-stats-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_basketball-portfolio-defense.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/workflows/: ci.yml  warm-ping.yml
.gstack/: browse-audit.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/seed/: load_basquethero.py
docs/adr/: 0001-stack-election.md  0002-deploy-pivot-render.md  0003-val-pir-fiba-formula.md  0004-standings-tie-breaker.md  0005-offline-batch-basquethero-ingest.md  0006-competitions-nullable-territory-group.md
docs/setup/: koyeb-neon.md  render-neon.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_core_entities.py  0003_seasons_unique_start_year.py  0004_comp_nullable_terr_group.py  0004_competitions_nullable_territory_group.py  0005_games_uq_matchday.py
scripts/: smoke-test-p2.sh
spike-basquethero/: spike.py
src/basketball_stats/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_competitions_endpoint.py  test_games_endpoint.py  test_healthz.py  test_leaderboards_val.py  test_load_basquethero_fixture.py  test_players_endpoint.py  test_pydantic_examples_render.py  test_seed_minimal_loads.py  (+2 more)
(+74 files in other folders)
