[project]
name = "basketball-stats-api"
version = "0.1.0"
description = "FastAPI + Postgres pur (Neon) basketball stats API — FCBQ amateur lliga"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Roger Llinares" }]
dependencies = [
    "fastapi==0.136.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "uvicorn[standard]==0.47.0",
    "structlog==25.5.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-env==1.6.0",
    "httpx==0.28.1",
    "testcontainers[postgres]==4.14.2",
    "ruff==0.15.14",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basketball_stats"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
env = [
    "TESTCONTAINERS_RYUK_DISABLED=true",
]
